# bin_api

./: .gitignore  Dockerfile  build.json  build_inside-container.json  build_outside-container.json  config.json  readme.md
.github/workflows/: .gitrepo  README.md  ebbs-build.yml  ebbs-pr.yml  ebbs-push.yml  ebbs-release.yml
inc/v1/common/: Auth.h  Environment.h  Includes.h  Parameter.h
inc/v1/package/: DownloadPackage.h  PublishPackage.h
local/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
part_server-workflows/: .gitrepo  ebbs-server.yml
src/: main.cpp
